# Multi-Agents-Crew-AI

./: README.md  example_threads.txt:Zone.Identifier  pyproject.toml  response.json
agents/: search_agent.py
crew_ai_agents/: crew_ai.ipynb  crew_research.py  crew_ticket_creation.py  erp_opportunity_brief.md  linkdin_content_creation.py  research_report.md  test_agents.ipynb
crew_ai_agents/assets/: 5e65def1-35c9-431c-b185-8564e960a3c9.md
crew_ai_agents/config/: agents.yaml  linkdin_agents.yaml  linkdin_tasks.yaml  tasks.yaml
crew_ai_agents/experiment/: crew_ai.ipynb
crew_ai_agents/test_flow/: pyproject.toml
crew_ai_agents/test_flow/src/test_flow/: main.py
graph_orchestration/: define_state.py
tools/: research_tools.py
utils/: message_formatting.py  prompt.py  structured_output_schema.py  token_usage.py
